--- a/css/style.css
+++ b/css/style.css
@@ -24,13 +24,13 @@ header {
 }
 
 section{
-    background-color: blanchedalmond;
+    background-color: rgb(204, 202, 198);
 
 
 }
 
 article{
-    background-color: cadetblue;
+    background-color: rgb(132, 136, 136);
     padding: 16px;
 }
 
