--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@
 }
 
 body{
-    background-color: rgb(182, 38, 38);
+    background-color: rgb(158, 151, 151);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    line-height: 1.3;
 
 
 }
